--- a/app/assets/stylesheets/partials/_filter.sass
+++ b/app/assets/stylesheets/partials/_filter.sass
@@ -1,6 +1,6 @@
 .filter
   display: block
-  margin: 30px 0 30px
+  margin: 40px 0 30px
   li
     display: inline-block
     vertical-align: top
@@ -10,13 +10,16 @@
     &.active
       a
         color: #fff
-        background: #656565
-        border-radius: 3px
+        background: linear-gradient(to bottom, #5c5c5c, #444444)
     &:last-child
       margin: 0
     a
-      padding: 3px 5px
+      display: inline-block
+      padding: 5px 7px 3px 7px
       color: #656565
-      font-size: 15px
-      &:hover
+      font-size: 13px
+      line-height: 13px
+      vertical-align: top
+      border-radius: 10px
+      &:hover, &:active, &:focus
         text-decoration: none
