--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -4,7 +4,7 @@
 
 - seo_keywords 'обувь стиль, обувной магазин стиль, женский обувной магазин Тверь, Испанская, Финская, Немецкая обувь Тверь'
 
-.content
+.content.margin-top-40
   = image_tag('about.jpg', alt: 'Магазин Стиль', class: 'about__img pull-left')
 
   p.lead «Стиль» - магазин женской обуви, который открылся в городе Тверь в 2004 г. и работает уже более 11 лет.
