--- a/app/views/pages/contacts.html.slim
+++ b/app/views/pages/contacts.html.slim
@@ -1,11 +1,11 @@
 - seo_title 'Контакты'
 
-- seo_description 'Обувь Тверь Стиль магазин. Обувной магазин женской обуви в городе Тверь'
+- seo_description 'Обувь Стиль Тверь - магазин женской обуви в Твери.'
 
-- seo_keywords 'Обувь Стиль, обувной магазин Стиль, женский обувной магазин город Тверь, Испанская, Финская, Немецкая обувь Тверь'
+- seo_keywords 'обувь, женская обувь, стиль, тверь, магазин обуви, каталог, обувь 2015, купить обувь, туфли, cапоги, полусапожки, ботильоны, ботинки'
 
 
-p.lead Будем рады вас видеть в нашем магазине, eсли вам нужна удобная, качественная и надежная женская обувь известных мировых брендов.
+p.lead.margin-top-40 Будем рады вас видеть в нашем магазине, eсли вам нужна удобная, качественная и надежная женская обувь известных мировых брендов.
 .row
   .col-md-8
     = render :partial => 'shared/map'
