--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,7 +11,6 @@
 @import "font-awesome"
 @import "nprogress"
 @import "fotorama"
-@import "lightslider"
 @import "fancybox/source/jquery.fancybox"
 @import "fancybox/source/helpers/jquery.fancybox-thumbs"
 
@@ -34,7 +33,11 @@ a
 
 .map
   margin: 0 0 30px 0
-  pointer-events: none
+  @media (max-width: 480px)
+    pointer-events: none
+  #YMapsID
+    @media (max-width: 480px)
+      height: 200px !important
 
 .page-header
   @media (max-width: 480px)
@@ -56,10 +59,9 @@ a
   padding: 20px 0
   // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05)
 .container-main
-  padding: 90px 15px 0
-  background: #f7f7f7
-  // box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
-  // background: linear-gradient(to bottom, #f1f1f1 0%, #d9d9d9 100%) repeat scroll 0 0 #d9d9d9
+  padding: 110px 15px 0
+  background: #fff
+
 .padding-top-none
   padding-top: 0
 
@@ -75,3 +77,6 @@ a
 
 .text-align-center
   text-align: center
+
+.margin-top-40
+  margin-top: 40px
