--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -1,7 +1,16 @@
 .footer
-  padding: 20px 0
-  color: #656565
+  border-top: 1px solid #000
+  max-width: 959px
+  left: 0
+  right: 0
+  margin: 50px auto 0
+  padding: 40px 0 80px 0
+  color: #505050
   font-size: 13px
+  @media (max-width: $screen-md)
+    border-top: none
+    margin-top: 20px
+  @media (max-width: $screen-sm)
   a
     color: #000
 
