--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -7,8 +7,11 @@
 
     ul.nav-main@menu
       li class="#{controller_name == 'catalog' && 'active'}"
-        = link_to 'Каталог обуви', catalog_index_path
+        = link_to catalog_index_path
+          span Каталог обуви
       li class="#{controller_name == 'pages' && action_name == 'contacts' && 'active'}"
-        = link_to 'Контакты', contacts_path
+        = link_to contacts_path
+          span Контакты
       li class="#{controller_name == 'pages' && action_name == 'about' && 'active'}"
-        = link_to 'О нас', about_path
+        = link_to about_path
+          span О нас
