--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -31,8 +31,8 @@
     margin-left: 10px
 
 .nav-main
-  float: left
-  margin: 40px 70px 0
+  float: right
+  margin: 40px 15px 0
   padding: 0 0 10px 0
   @media (max-width: $screen-sm)
     margin: 0
