--- a/app/views/admin/paintings/_form.html.slim
+++ b/app/views/admin/paintings/_form.html.slim
@@ -12,6 +12,9 @@
         = f.label :item_type
         = f.input :item_type, :label => false
       p
+        = f.label :price
+        = f.input :price, :label => false
+      p
         = f.input :image
       p
         = f.label :remote_image_url, "or image URL"
