--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -10,6 +10,7 @@
   margin-top: 40px
   text-transform: uppercase
   font-family: $font-family-sans-serif-light
+  text-align: center
   @media (max-width: $screen-xs-min)
     font-size: 24px
 
@@ -21,3 +22,9 @@
 
 .gallery__item__link
   display: block
+
+.gallery__item__price
+  display: block
+  font-size: 12px
+  margin-top: 5px
+  text-align: left
