--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -15,7 +15,7 @@
     font-size: 24px
 
 .gallery__item
-  margin: 0 0 20px 0
+  margin: 0 0 40px 0
   transition: opacity .2s
   &:hover
     opacity: 0.85
@@ -25,6 +25,8 @@
 
 .gallery__item__price
   display: block
-  font-size: 12px
-  margin-top: 5px
-  text-align: left
+  font-size: 22px
+  margin-top: 8px
+  padding: 0 20px 0 0
+  text-align: right
+  font-family: $font-family-marianna
