--- a/app/views/catalog/index.html.slim
+++ b/app/views/catalog/index.html.slim
@@ -49,13 +49,16 @@ h1.hide Каталог обуви
     - unless paintings_collection(gallery).present?
       p.lead Извините, товара такого типа пока нет
     - paintings_collection(gallery).each do |item|
-      .col-md-4.col-sm-4.col-xs-6
-        .gallery__item
-          = link_to image_tag(item.image_url(:full), class: 'img-responsive'), get_previews_path(item), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
-          - if item.price != 0
-            strong.gallery__item__price
-              => item.price
-              | руб.
+      - 2.times
+        .col-md-4.col-sm-4.col-xs-6
+          .gallery__item
+            = link_to image_tag(item.image_url(:full), class: 'img-responsive'), get_previews_path(item), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
+            - if !item.price != 0
+              strong.gallery__item__price
+                / => item.price
+                | 1600
+                '
+                | руб.
 
   = render_pagination paintings_collection(gallery)
 
