--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -12,6 +12,7 @@
   border-bottom: 1px solid #000
   @media (max-width: $screen-sm)
     height: 100px
+    border-bottom: none
 
 .main_header-fixed
   position: relative
