--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -5,20 +5,20 @@
   height: 110px
   width: 100%
   z-index: 500
-  max-width: 939px
+  max-width: 961px
   margin: 0 auto
   left: 0
   right: 0
   border-bottom: 1px solid #000
   @media (max-width: $screen-sm)
     height: 100px
-    border-bottom: none
+    border-bottom: 1px solid #ddd
 
 .main_header-fixed
   position: relative
   top: 0
   left: 0
-  border-bottom: none
+  border-bottom: 1px solid #ddd
 
 .main_header__logo
   display: inline-block
