--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,6 +17,15 @@
 @import "partials/*"
 
 
+.preloader
+  position: absolute
+  left: 50%
+  top: 50%
+  margin: -64px 0 0 -64px
+  width: 128px
+  height: 128px
+  z-index: 10
+
 
 h1
   text-transform: uppercase
