--- a/app/views/catalog/index.html.slim
+++ b/app/views/catalog/index.html.slim
@@ -51,7 +51,12 @@ h1.hide Каталог обуви
     - paintings_collection(gallery).each do |item|
       .col-md-4.col-sm-4.col-xs-12
         .gallery__item
-          = link_to image_tag(item.image_url(:full), class: 'img-responsive'), get_previews_path(item), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
+          .gallery__item__link
+            = image_tag('preloader.svg', role: 'preloader', class: 'preloader')
+            = image_tag(item.image_url(:full), class: 'img-responsive', role: 'catalogItem')
+
+            = link_to '', get_previews_path(item), data: { toggle: 'modal', target: '@modal' }, class: 'gallery__item__link-pseudo'
+
           - if item.price != 0
             strong.gallery__item__price
               => item.price
