--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -1,7 +1,11 @@
 - articles.each do |article|
   .col-md-4.col-sm-4.col-xs-6
     .gallery__item
-      = link_to image_tag(article.image_url(:full), class: 'img-responsive'), get_previews_path(article), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
+      .gallery__item__link
+        = image_tag('preloader.svg', role: 'preloader', class: 'preloader')
+
+        = image_tag(article.image_url(:full), class: 'img-responsive', role: 'catalogItem')
+        = link_to '', get_previews_path(article), data: { toggle: 'modal', target: '@modal' }, class: 'gallery__item__link-pseudo'
       - if article.price != 0
         strong.gallery__item__price
           => article.price
