--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -2,7 +2,7 @@
   .col-md-4.col-sm-4.col-xs-6
     .gallery__item
       .gallery__item__link
-        = image_tag('preloader.svg', role: 'preloader', class: 'preloader')
+        = image_tag('preloader.svg', role: 'preloader', class: 'preloader visible-lg-block visible-md-block')
 
         = image_tag(article.image_url(:full), class: 'img-responsive', role: 'catalogItem')
         = link_to '', get_previews_path(article), data: { toggle: 'modal', target: '@modal' }, class: 'gallery__item__link-pseudo'
