--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -14,9 +14,9 @@
   = image_tag('dakkem.jpg', alt: 'Dakkem')
   = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
 
-noindex
-  = link_to 'Перейти на Каталог Обуви 2016', catalog_index_path, class: 'fotorama__link'
-  = link_to 'Получить Скидку 5%', 'https://vk.com/shoes_style_tver', target: '_blank', class: 'fotorama__link fotorama__link-bottom'
+/ noindex
+/   = link_to 'Перейти на Каталог Обуви 2016', catalog_index_path, class: 'fotorama__link'
+/   = link_to 'Получить Скидку 5%', 'https://vk.com/shoes_style_tver', target: '_blank', class: 'fotorama__link fotorama__link-bottom'
   / = image_tag('bf.jpg', alt: 'Beautifeel', class: 'img-responsive')
   / = image_tag('pikolinas.jpg', alt: 'Pikolinas', class: 'img-responsive')
 / = image_tag('sale.jpg', alt: 'сезонная скидка', class: 'img-responsive')
