--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -53,6 +53,7 @@
       color: #333
       font-size: 13px
       line-height: 20px
+      letter-spacing: 1px
       text-transform: uppercase
       @media (max-width: $screen-sm)
         display: block
