--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -11,15 +11,35 @@
 / .fotorama@fotorama  data-width="100%" data-height='auto' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
 
 = content_for (:test)
-  @imageGrid
-    = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
+  .imgGrid@imageGrid
+    / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
+    / = image_tag('bf.jpg', alt: 'Spring Summer 2016')
     = image_tag('2016.jpg', alt: 'Spring Summer 2016')
     / = image_tag('dakkem.jpg', alt: 'Dakkem')
-    / = image_tag('2016.jpg', alt: 'Spring Summer 2016')
+    = image_tag('pikolinos_colors_01.jpg', alt: 'Dakkem')
+    = image_tag('pic_summer.jpg', alt: 'Pikolinas Summer 2016')
     = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
     / = image_tag('sale.jpg', alt: 'сезонная распродажа')
-    = image_tag('Beautifeel.jpg', alt: 'BeautiFeel')
+    / = image_tag('Beautifeel.jpg', alt: 'BeautiFeel')
     = image_tag('Hogl-main_01.jpg', alt: 'BeautiFeel')
+    / = link_to image_tag('hs.jpg', alt: 'Hispanitas'), '#'
+    / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
+    / = image_tag('2016.jpg', alt: 'Spring Summer 2016')
+    / = image_tag('dakkem.jpg', alt: 'Dakkem')
+    / = image_tag('2016.jpg', alt: 'Spring Summer 2016')
+    / = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
+    / = image_tag('sale.jpg', alt: 'сезонная распродажа')
+    / = image_tag('Beautifeel.jpg', alt: 'BeautiFeel')
+    / = image_tag('Hogl-main_01.jpg', alt: 'BeautiFeel')
+    / = link_to image_tag('hs.jpg', alt: 'Hispanitas'), '#'
+    / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
+    / = image_tag('2016.jpg', alt: 'Spring Summer 2016')
+    / = image_tag('dakkem.jpg', alt: 'Dakkem')
+    / = image_tag('2016.jpg', alt: 'Spring Summer 2016')
+    / = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
+    / = image_tag('sale.jpg', alt: 'сезонная распродажа')
+    / = image_tag('Beautifeel.jpg', alt: 'BeautiFeel')
+    / = image_tag('Hogl-main_01.jpg', alt: 'BeautiFeel')
     / = link_to image_tag('hs.jpg', alt: 'Hispanitas'), '#'
 / noindex
 /   = link_to 'Перейти на Каталог Обуви 2016', catalog_index_path, class: 'fotorama__link'
