--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -6,8 +6,9 @@
   font-size: 32px
   font-weight: 100
   line-height: 28px
+  letter-spacing: 2.5px
   margin-bottom: 8px
-  margin-top: 40px
+  margin-top: 70px
   text-transform: uppercase
   font-family: $font-family-sans-serif-light
   text-align: center
