add view swither

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -36,7 +36,9 @@ body
     opacity: 1
     // transform: translateY(0px)
 
-
+.gallery__list-small
+  .col-md-4
+    width: 25% !important
 
 .imgGrid
   img
