--- a/app/views/catalog/index.html.slim
+++ b/app/views/catalog/index.html.slim
@@ -17,45 +17,51 @@ h1.hide Каталог обуви
     = gallery.name
 
 
+  / = form_tag catalog_index_path, method: :get
+
+  /   = text_field_tag :query, params[:query]
+  /   = submit_tag 'Search', name: nil
+
   ul.view_swither.visible-lg-block.visible-md-block
     li
       = link_to fa_icon('th-large'), 'javascript:void(0);', role: 'viewSwitherLarge', class: 'active'
     li
       = link_to fa_icon('th'), 'javascript:void(0);', role: 'viewSwitherSmall'
 
-  ul.filter
-    - types = Gallery.find(gallery.id).paintings.pluck(:item_type).uniq
-    li class="#{'active' if search == nil && !params[:all]}"
-      = link_to 'Все', catalog_index_path(type: nil)
-    - if types.include?(1)
-      li class="#{'active' if search.to_i == 1}"
-        = link_to 'Туфли', catalog_index_path(type: 1)
-    - if types.include?(2)
-      li class="#{'active' if search.to_i == 2}"
-        = link_to 'Босоножки', catalog_index_path(type: 2)
-    - if types.include?(3)
-      li class="#{'active' if search.to_i == 3}"
-        = link_to 'Шлепанцы', catalog_index_path(type: 3)
-    - if types.include?(4)
-      li class="#{'active' if search.to_i == 4}"
-        = link_to 'Сапоги', catalog_index_path(type: 4)
-    - if types.include?(5)
-      li class="#{'active' if search.to_i == 5}"
-        = link_to 'Полусапожки', catalog_index_path(type: 5)
-    - if types.include?(6)
-      li class="#{'active' if search.to_i == 6}"
-        = link_to 'Ботильоны', catalog_index_path(type: 6)
-    - if types.include?(7)
-      li class="#{'active' if search.to_i == 7}"
-        = link_to 'Ботинки', catalog_index_path(type: 7)
-    - if types.include?(8)
-      li class="#{'active' if search.to_i == 8}"
-        = link_to 'Сумки', catalog_index_path(type: 8)
+  - unless params[:query].present?
+    ul.filter
+      - types = Gallery.find(gallery.id).paintings.pluck(:item_type).uniq
+      li class="#{'active' if search == nil && !params[:all]}"
+        = link_to 'Все', catalog_index_path(type: nil)
+      - if types.include?(1)
+        li class="#{'active' if search.to_i == 1}"
+          = link_to 'Туфли', catalog_index_path(type: 1)
+      - if types.include?(2)
+        li class="#{'active' if search.to_i == 2}"
+          = link_to 'Босоножки', catalog_index_path(type: 2)
+      - if types.include?(3)
+        li class="#{'active' if search.to_i == 3}"
+          = link_to 'Шлепанцы', catalog_index_path(type: 3)
+      - if types.include?(4)
+        li class="#{'active' if search.to_i == 4}"
+          = link_to 'Сапоги', catalog_index_path(type: 4)
+      - if types.include?(5)
+        li class="#{'active' if search.to_i == 5}"
+          = link_to 'Полусапожки', catalog_index_path(type: 5)
+      - if types.include?(6)
+        li class="#{'active' if search.to_i == 6}"
+          = link_to 'Ботильоны', catalog_index_path(type: 6)
+      - if types.include?(7)
+        li class="#{'active' if search.to_i == 7}"
+          = link_to 'Ботинки', catalog_index_path(type: 7)
+      - if types.include?(8)
+        li class="#{'active' if search.to_i == 8}"
+          = link_to 'Сумки', catalog_index_path(type: 8)
     / li
     /   = link_to 'Все сразу', galleries_path(all: true)
   .row.gallery__list@masonry@paginatable data-id="#{gallery.id}"
     - unless paintings_collection(gallery).present?
-      p.lead Извините, товара такого типа пока нет
+      p.lead.text-center Извините, товара такого бренда нет
     - paintings_collection(gallery).each do |item|
       .col-md-4.col-sm-4.col-xs-12@viewItem
         .gallery__item
