--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -1,8 +1,9 @@
 .view_swither
+  display: flex
+  justify-content: flex-end
   margin: 30px 0 0 15px
   text-align: right
   li
-    display: inline-block
     margin: 0 15px 0 0
     padding: 0
     font-size: 20px
