--- a/app/views/catalog/index.html.slim
+++ b/app/views/catalog/index.html.slim
@@ -17,12 +17,13 @@ h1.hide Каталог обуви
     = gallery.name
 
 
-  / = form_tag catalog_index_path, method: :get
+  ul.view_swither
+    li
+      = form_tag catalog_index_path, class: 'search_form', method: :get
+        = text_field_tag :query, params[:query]
+        = button_tag(type: 'submit') do
+          = fa_icon('search')
 
-  /   = text_field_tag :query, params[:query]
-  /   = submit_tag 'Search', name: nil
-
-  ul.view_swither.visible-lg-block.visible-md-block
     li
       = link_to fa_icon('th-large'), 'javascript:void(0);', role: 'viewSwitherLarge', class: 'active'
     li
@@ -57,11 +58,18 @@ h1.hide Каталог обуви
       - if types.include?(8)
         li class="#{'active' if search.to_i == 8}"
           = link_to 'Сумки', catalog_index_path(type: 8)
+  - else
+    p.search_results
+      | Результаты поиска
+      '
+      |"
+      = params[:query]
+      |"
     / li
     /   = link_to 'Все сразу', galleries_path(all: true)
   .row.gallery__list@masonry@paginatable data-id="#{gallery.id}"
-    - unless paintings_collection(gallery).present?
-      p.lead.text-center Извините, товара такого бренда нет
+    / - unless paintings_collection(gallery).present?
+    /   p.lead.text-center Извините, товара такого бренда нет
     - paintings_collection(gallery).each do |item|
       .col-md-4.col-sm-4.col-xs-12@viewItem
         .gallery__item
