--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -39,6 +39,8 @@ body
 .gallery__list-small
   .col-md-4
     width: 25% !important
+    @media (max-width: 650px)
+      width: 50% !important
 
 .imgGrid
   img
