--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -11,6 +11,8 @@
 / .fotorama@fotorama  data-width="100%" data-height='auto' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
 
 = content_for (:test)
+
+  = image_tag('2016.jpg', alt: 'Spring Summer 2016', class: 'img-responsive')
   .imgGrid@imageGrid
     / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
     / = image_tag('bf.jpg', alt: 'Spring Summer 2016')
