--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,8 @@ html
     meta{name="apple-mobile-web-app-capable" content="yes"}
     meta{content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=1" name="viewport"}
 
+    link rel="icon" href="#{image_path 'favicon.ico'}" type="image/x-icon"
+    link rel="shortcut icon" href="#{image_path 'favicon.ico'}" type="image/x-icon"
 
     = stylesheet_link_tag '//fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Playfair+Display&subset=latin,cyrillic'
 
