--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -12,7 +12,7 @@
 
 = content_for (:test)
 
-  = image_tag('2016.jpg', alt: 'Spring Summer 2016', class: 'img-responsive')
+  / = image_tag('2016.jpg', alt: 'Spring Summer 2016', class: 'img-responsive')
   .imgGrid@imageGrid
     / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
     / = image_tag('bf.jpg', alt: 'Spring Summer 2016')
