makeup search; add vk sale

--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -16,3 +16,11 @@
         color: #000
       &.active
         opacity: 1
+
+
+.view_swither__search
+  display: inline-block
+  svg
+    height: 20px
+    width: 20px
+    fill: #000
