--- a/app/assets/stylesheets/partials/_search_form.sass
+++ b/app/assets/stylesheets/partials/_search_form.sass
@@ -1,18 +1,32 @@
 .search_form
-  position: relative
-  height: 20px
+  display: none
+  left: 0
+  right: 0
+  margin: 0 auto
+  top: 150px
+  width: 100%
+  max-width: 680px
+  height: 55px
   line-height: 20px
+  border: 1px solid #ddd
+  box-sizing: border-box
+  border-radius: 4px
+  z-index: 400
+  &.active
+    display: block
+    position: fixed
   input
-    width: 150px
-    height: 20px
-    line-height: 20px
-    padding: 0 25px 0 10px
+    width: 100%
+    height: 100%
+    line-height: 55px
+    padding: 0 25px
     outline: none
-    font-size: 12px
+    font-size: 25px
     border-radius: 10px
     border: none
-    border: 1px solid #ddd
     box-sizing: border-box
+    border-radius: 4px
+    background: #ECECEC
   button
     position: absolute
     right: 0
