--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -21,6 +21,8 @@
         = image_tag('2016.jpg', alt: 'Spring Summer 2016')
     / = image_tag('dakkem.jpg', alt: 'Dakkem')
     = image_tag('pikolinos_colors_01.jpg', alt: 'Dakkem')
+    = link_to 'https://vk.com/shoes_style_tver', target: '_blank'
+      = image_tag('vk.jpg', alt: 'Получить Скидку 5%', class: 'img-responsive')
     = image_tag('pic_summer.jpg', alt: 'Pikolinas Summer 2016')
     = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
     / = image_tag('sale.jpg', alt: 'сезонная распродажа')
