--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -1,7 +1,7 @@
 .view_swither
   display: flex
   justify-content: flex-end
-  margin: 30px 0 0 15px
+  margin: 30px 0 40px 15px
   text-align: right
   li
     margin: 0 15px 0 0
