--- a/app/assets/stylesheets/partials/_filter.sass
+++ b/app/assets/stylesheets/partials/_filter.sass
@@ -1,6 +1,6 @@
 .filter
   display: block
-  margin: 40px 0 30px 10px
+  margin: 0 0 30px 10px
   li
     display: inline-block
     vertical-align: top
