--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -3,7 +3,7 @@
   width: 100%
   left: 0
   right: 0
-  margin: 50px auto 0
+  margin: 0 auto
   padding: 40px 0 80px 0
   color: #505050
   font-size: 13px
