--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -37,8 +37,9 @@
 
 .gallery__item__price
   display: block
-  font-size: 22px
+  font-size: 14px
   margin-top: 8px
-  padding: 0 20px 0 0
-  text-align: right
-  font-family: $font-family-marianna
+  text-align: center
+  font-family: $font-family-sans-serif
+  font-weight: 100
+  // font-family: $font-family-marianna
