--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -1,6 +1,6 @@
 .view_swither
   display: flex
-  justify-content: flex-end
+  justify-content: center
   margin: 30px 0 40px 15px
   text-align: right
   li
@@ -19,8 +19,9 @@
 
 
 .view_swither__search
-  display: inline-block
   svg
+    position: relative
+    top: -2px
     height: 20px
     width: 20px
     fill: #000
