--- a/app/assets/stylesheets/partials/_filter.sass
+++ b/app/assets/stylesheets/partials/_filter.sass
@@ -1,9 +1,8 @@
 .filter
   display: block
-  margin: 0 0 30px 10px
+  margin: 40px 0 30px 10px
   li
     display: inline-block
-    vertical-align: top
     margin: 0 20px 0 0
     @media (max-width: $screen-xs)
       margin: 0 20px 20px 0
