--- a/app/assets/stylesheets/partials/_up.sass
+++ b/app/assets/stylesheets/partials/_up.sass
@@ -1,20 +1,35 @@
 .up
+  display: none
   position: fixed
+  bottom: 25px
   cursor: pointer
-  top: -100px
   right: 0
-  margin: 0 0 0 -80px
-  padding: 8px
-  width: 160px
+  left: 0
+  margin: 0 auto
+  width: 50px
+  height: 50px
   text-align: center
   font-size: 14px
   color: #808080
   z-index: 1000
-  background: #fff
-  opacity: 0.8
-  transition: top .5s
+  background: rgba(0,0,0,0.35)
+  border-radius: 50%
+  opacity: 0
+  transition: all .5s ease 0s
   transform: translate3d(0, 0, 0)
+  touch-action: manipulation
+  .svg
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 43px
+  svg
+    height: 30px
+    width: 40px
+    fill: #fff
+    transform: rotate(90deg)
   &:hover
-    color: #000
+    background: rgba(0,0,0,0.6)
   &.fixed
-    top: 120px
+    display: block
+    opacity: 1
