--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -1,21 +1,13 @@
-.view_swither
-  display: flex
-  justify-content: center
-  margin: 30px 0 40px 15px
-  text-align: right
-  li
-    margin: 0 15px 0 0
-    padding: 0
-    font-size: 20px
-    &:last-child
-      margin: 0
-    a
+li.view_swither
+  > a
+    color: #000
+    opacity: 0.5
+    font-size: 16px
+    &:hover, &:active, &:focus
       color: #000
-      opacity: 0.5
-      &:hover, &:active, &:focus
-        color: #000
-      &.active
-        opacity: 1
+      opacity: 1
+    &.active
+      opacity: 1
 
 
 .view_swither__search
