--- a/app/assets/stylesheets/partials/_view_swither.sass
+++ b/app/assets/stylesheets/partials/_view_swither.sass
@@ -1,8 +1,10 @@
 li.view_swither
+  margin: 0 5px 0 0
+  float: right
   > a
     color: #000
     opacity: 0.5
-    font-size: 16px
+    font-size: 20px
     &:hover, &:active, &:focus
       color: #000
       opacity: 1
