--- a/app/views/pages/contacts.html.slim
+++ b/app/views/pages/contacts.html.slim
@@ -4,8 +4,16 @@
 
 - seo_keywords 'обувь, женская обувь, стиль, тверь, магазин обуви, каталог, обувь 2015, купить обувь, туфли, cапоги, полусапожки, ботильоны, ботинки'
 
+/ h1 Контакты
 
-p.lead.margin-top-40 Будем рады вас видеть в нашем магазине, eсли вам нужна удобная, качественная и надежная женская обувь известных мировых брендов.
+
+/   ul.list-contacts
+/     li Россия, 170000, г. Тверь, пр-т Ленина, 15/4 (остановка л. Чайкиной)
+/     li = mail_to 'shoes.style69@gmail.com', 'shoes.style69@gmail.com'
+/     / li.contacts_address Россия, 170000, г. Тверь, пр-т Ленина, 15/4 (остановка л. Чайкиной)
+
+
+/ p.lead.margin-top-40 Будем рады вас видеть в нашем магазине, eсли вам нужна удобная, качественная и надежная женская обувь известных мировых брендов.
 .row
   .col-md-8
     = render :partial => 'shared/map'
