--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -12,6 +12,8 @@
         = link_to fa_icon('vk'), 'https://vk.com/shoes_style_tver', target: '_blank'
       li
         = link_to fa_icon('google-plus'), 'https://plus.google.com/109544173905661593598/about', target: '_blank'
+      li
+        = link_to fa_icon('instagram'), 'https://www.instagram.com/shoes_style69/', target: '_blank'
 
 
 
