--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -4,9 +4,9 @@
   left: 0
   right: 0
   margin: 0 auto
-  padding: 40px 0 80px 0
+  padding: 40px 15px 80px
   color: #505050
-  font-size: 13px
+  font-size: 15px
   @media (max-width: $screen-md)
     border-top: none
     margin-top: 20px
