--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -8,12 +8,16 @@
   /   | Мы специализируемся на женской обуви и соотрудничаем с такими известными торговыми марками как: Hispanitas, Pikolinas, Beautifeel, Hogl и другими.
 / .sale.well.well-small
 /   = image_tag('sale.jpg', alt: 'сезонная распродажа', class: 'img-responsive')
-/ .fotorama@fotorama  data-width="100%" data-height='auto' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
 
 = content_for (:test)
+  .fotorama.visible-xs-block@fotorama  data-width="100%" data-height='auto' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
+    = image_tag('sale.jpg', alt: 'сезонная распродажа')
+    = image_tag('pic_summer.jpg', alt: 'Pikolinas Summer 2016')
+    = image_tag('vk.jpg', alt: 'Получить Скидку 5%')
+    = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
+    = image_tag('2016.jpg', alt: 'Spring Summer 2016')
 
-  / = image_tag('2016.jpg', alt: 'Spring Summer 2016', class: 'img-responsive')
-  .imgGrid@imageGrid
+  .imgGrid.visible-lg-block.visible-md-block@imageGrid
     / = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
     / = image_tag('bf.jpg', alt: 'Spring Summer 2016')
     noindex
