--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,6 +41,11 @@ body
     @media (max-width: 650px)
       width: 50% !important
 
+.fotorama
+  display: none
+  @media (max-width: 994px)
+    display: block
+
 .imgGrid
   img
     opacity: 0
