--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -1,18 +1,18 @@
 .footer
-  max-width: 1200px
   width: 100%
   left: 0
   right: 0
   margin: 0 auto
   padding: 40px 15px 80px
-  color: #505050
+  color: #5BBEB9
   font-size: 15px
+  background: #222
   @media (max-width: $screen-md)
     border-top: none
     margin-top: 20px
   @media (max-width: $screen-sm)
   a
-    color: #000
+    color: #fff
 
 .footer__content
   margin: 0 auto
