--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,7 +8,7 @@
     ul.nav-main@menu
       li class="#{controller_name == 'catalog' && 'active'}"
         = link_to catalog_index_path
-          span ВЕСНА - ЛЕТО 2016
+          span Вестна - Лето 2016
       li class="#{controller_name == 'pages' && action_name == 'contacts' && 'active'}"
         = link_to contacts_path
           span Контакты
