--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -44,23 +44,22 @@
       width: 100%
     &.active
       a
-        span
-          border-bottom: 1px solid #000
+        color: #5BBEB9
+
     a
       display: inline-block
       padding: 40px 20px 16px
-      color: #666
+      color: #1e1e1e
       font-size: 15px
       line-height: 20px
       letter-spacing: 1.6px
-      text-transform: uppercase
+      transition: color 400ms cubic-bezier(0.23, 1, 0.32, 1) 0s
       @media (max-width: $screen-sm)
         display: block
         padding: 15px 0 15px 25px
       &:hover, &:active, &:focus
+        color: #5BBEB9
         text-decoration: none
-        span
-          border-bottom: 1px solid #000
       &:focus
         outline: none
       span
