add catalog animation

--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -1,5 +1,5 @@
 - articles.each do |article|
-  .col-md-4.col-sm-4.col-xs-12
+  .col-md-4.col-sm-4.col-xs-12.catalog_item
     .gallery__item
       .gallery__item__link
         = image_tag(article.image_url(:full), class: 'img-responsive', role: 'catalogItem')
