--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -51,6 +51,17 @@ body
     opacity: 0
     // transition: opacity 0.3s ease
 
+@keyframes moveUp
+  100%
+    transform: translateY(0)
+
+
+.catalog_item.animate
+  // transition: all 2s ease
+  transform: translateY(200px)
+  animation: moveUp 0.65s ease forwards
+
+
 .imgAnim
   transition: opacity 0.5s ease-out
   //   animation: 0.25s ease 0s normal none 1 running panel-animateIn
