--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -4,11 +4,11 @@
   right: 0
   margin: 0 auto
   padding: 40px 15px 80px
-  color: #5BBEB9
+  color: #222
   font-size: 15px
-  background: #222
+  background: #f4f4f4
   a
-    color: #fff
+    color: #5BBEB9
 
 .footer__content
   margin: 0 auto
