--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -51,6 +51,7 @@
       padding: 40px 20px 16px
       color: #1e1e1e
       font-size: 15px
+      font-weight: bold
       line-height: 20px
       letter-spacing: 1.6px
       transition: color 400ms cubic-bezier(0.23, 1, 0.32, 1) 0s
