--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -7,6 +7,8 @@
   color: #222
   font-size: 15px
   background: #f4f4f4
+  @media (max-width: 992px)
+    background: #fff
   a
     color: #5BBEB9
 
