add transitions; fix

--- a/app/assets/stylesheets/bootstrap/_variables.scss
+++ b/app/assets/stylesheets/bootstrap/_variables.scss
@@ -631,7 +631,7 @@ $modal-content-border-color:                   rgba(0,0,0,.2) !default;
 $modal-content-fallback-border-color:          #999 !default;
 
 //** Modal backdrop background color
-$modal-backdrop-bg:           #292929 !default;
+$modal-backdrop-bg:           #bbb !default;
 //** Modal backdrop opacity
 $modal-backdrop-opacity:      1 !default;
 //** Modal header border color
