--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -3,9 +3,9 @@
   left: 0
   right: 0
   margin: 0 auto
-  padding: 40px 15px 80px
+  padding: 30px 15px 15px
   color: #222
-  font-size: 15px
+  font-size: 12px
   background: #f4f4f4
   @media (max-width: 992px)
     background: #fff
@@ -31,16 +31,17 @@
   li
     display: inline-block
     vertical-align: top
-    margin: 0 10px 0 0
+    margin: 0 15px 0 0
     &:last-child
       margin: 0
     a
       i
-        line-height: 20px
-        font-size: 20px
+        font-size: 15px
         &.fa-vk
           color: #3D6191
         &.fa-google-plus
           color: #C12D26
+        &.fa-instagram
+          color: #000
 
 
