--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -2,7 +2,7 @@
   .col-md-4.col-sm-4.col-xs-12.catalog_item
     .gallery__item
       .gallery__item__link
-        = image_tag(article.image_url(:full), class: 'img-responsive', role: 'catalogItem')
+        = image_tag(article.image_url(:full), class: 'gallery__img img-responsive', role: 'catalogItem')
         = link_to '', get_previews_path(article), data: { toggle: 'modal', target: '@modal' }, class: 'gallery__item__link-pseudo'
       - if article.price != 0
         strong.gallery__item__price
