--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -9,7 +9,7 @@
       / li class="#{controller_name == 'catalog' && 'active'}"
       /   = link_to catalog_index_path
       /     span Каталог
-      / li class="#{controller_name == 'pages' && action_name == 'contacts' && 'active'}"
+      li class="#{controller_name == 'pages' && action_name == 'contacts' && 'active'}"
         = link_to contacts_path
           span Контакты
       li class="#{controller_name == 'pages' && action_name == 'about' && 'active'}"
